# pure-basic

./: .ghci  .gitignore  LICENSE  README.md  basic.cabal
app/: Main.hs
doc/: BASIC_BNF_Grammar.txt  basic.manual.txt  notes.md
src/Basic/: AST.hs  CodeGen.hs  Doub.hs  Eval.hs  Parser.hs  Prelude.hs  Type.hs  Unparse.hs  VM.hs  Validate.hs  doub.c  libdoub.dylib
test/basic-progs/: amazing.bas  arr.bas  az1.bas  az2.bas  bar.bas  bool.bas  bubbleperm.bas  bubblesort.bas  coerce.bas  emptyLine.bas  for-error.bas  for.bas  forcall.bas  forcall2.bas  fordouble.bas  forwhile.bas  iOrD.bas  if.bas  ifgo.bas  multiline-if.bas  no-tc-amazing.bas  overflow.bas  permzing.bas  print.bas  test-bubble.bas  while.bas
