name:                basic
version:             0.0.1.0
description:         Please see README.md
author:              David Ringo
maintainer:          davidmringo@gmail.com
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Basic.Eval
                     , Basic.AST
                     , Basic.Validate
                     , Basic.Parser
                     , Basic.Type
                     , Basic.CodeGen
                     , Basic.Doub
                     , Basic.Unparse
  build-depends:       attoparsec
                     , attoparsec-expr >= 0.1.1.2
                     , base >= 4.7 && < 5
                     , containers >= 0.5.7.1
                     , mtl
                     , text
                     , vector >= 0.11.0.0
                     , transformers >= 0.5.2.0
                     , pretty
                     , pretty-show
                     , extra
                     , split
                     , random
                     , formatting

  c-sources:           src/Basic/doub.c
  default-language:    Haskell2010

executable basic
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , basic
                     , containers >= 0.5.7.1
  default-language:    Haskell2010

-- test-suite basic-test
--   type:                exitcode-stdio-1.0
--   hs-source-dirs:      test
--   main-is:             Spec.hs
--   build-depends:       base
--                      , basic
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/dmringo/pure-basic
